 * Extend support for custom user interface colours across almost all admin colours (Thibaud Colas)
 * Add HTML-aware max_length validation and character count on RichTextField and RichTextBlock (Matt Westcott, Thibaud Colas)
 * Remove undocumented `SearchableListMixin` (Sage Abdullah)
 * Extract filtering code from ReportView to generic IndexView (Sage Abdullah)
 * Retain other query params in header search behaviour (Sage Abdullah)
 * Remove `is_parent` kwarg in various page button hooks as this approach is no longer required (Paarth Agarwal)
 * Improve security of redirect imports by adding a file hash (signature) check for so that any tampering of file contents between requests will throw a `BadSignature` error (Jaap Roes)
 * Refresh designs for Home (Dashboard) site summary panels, use theme spacing and colours, add support for RTL layouts and better support for small devices (Paarth Agarwal, LB (Ben) Johnston)
 * Include all CSS system colours in allowed values in Stylelint's declaration-strict-value rule (Thibaud Colas)
 * Add JavaScript `range` util for (LB (Ben) Johnston)
 * Allow generic chooser viewsets to support non-model data such as an API endpoint (Matt Wescott)
 * Update all widget styles across the admin UI (Thibaud Colas)
 * Update field styles across forms, with help text consistently under fields, error messages above, and comment buttons to the side (Thibaud Colas)
 * Make all sections of the page editing UI collapsible by default (Thibaud Colas)
 * Update the side panels to prevent overlap with form fields unless necessary (Thibaud Colas)
 * Remove unused change password page, was not removed when account management view was converted to tabs (Paarth Agarwal)
 * Rework layout of login and password reset pages to ensure `main` id on main element (for skip link) and consistent DOM layout for h1 header (Paarth Agarwal, LB (Ben) Johnston)
 * Adopt new design, including logo, for login and password reset pages (Paarth Agarwal, LB (Ben) Johnston)