@@ -1,55 +1,46 @@
-{% extends "wagtailadmin/base.html" %}
+{% extends "wagtailadmin/shared/confirm_unpublish.html" %}
 {% load i18n wagtailadmin_tags %}
-{% block titletag %}{% blocktrans trimmed with title=page.get_admin_display_title %}Unpublish {{ title }}{% endblocktrans %}{% endblock %}
-{% block content %}
-    {% trans "Unpublish" as unpublish_str %}
-    {% include "wagtailadmin/shared/header.html" with title=unpublish_str subtitle=page.get_admin_display_title icon="doc-empty-inverse" %}
 
-    <div class="nice-padding">
-        <p>
-            {% trans "Are you sure you want to unpublish this page?" %}
-            {% if translation_count %}
-                {% blocktrans trimmed with translation_count=translation_count count counter=translation_count %}
-                    This will also unpublish one translation of the page.
+{% block confirmation_text %}
+    <p>
+        {% trans "Are you sure you want to unpublish this page?" %}
+        {% if translation_count %}
+            {% blocktrans trimmed with translation_count=translation_count count counter=translation_count %}
+                This will also unpublish one translation of the page.
+            {% plural %}
+                This will also unpublish all {{ translation_count }} translations of the page.
+            {% endblocktrans %}
+        {% endif %}
+    </p>
+{% endblock %}
+
+{% block form_content %}
+    <input type="hidden" name="next" value="{{ next_url }}">
+
+    {% if live_descendant_count > 0 or translation_descendant_count > 0 %}
+        {% fragment as text %}
+            {% if translation_descendant_count %}
+                {% if translation_descendant_count == 1 %}
+                    {% blocktrans trimmed count counter=live_descendant_count %}
+                        This page has one subpage and its translations have a combined one translated child page. Unpublish these too
+                    {% plural %}
+                        This page has {{ live_descendant_count }} child pages and its translations have a combined one translated child page. Unpublish these too
+                    {% endblocktrans %}
+                {% else %}
+                    {% blocktrans trimmed count counter=live_descendant_count %}
+                        This page has one child page and its translations have a combined {{ translation_descendant_count }} translated child pages. Unpublish these too
+                    {% plural %}
+                        This page has {{ live_descendant_count }} child pages and its translations have a combined {{ translation_descendant_count }} translated child pages. Unpublish these too
+                    {% endblocktrans %}
+                {% endif %}
+            {% else %}
+                {% blocktrans trimmed count counter=live_descendant_count %}
+                    This page has one subpage. Unpublish this too
                 {% plural %}
-                    This will also unpublish all {{ translation_count }} translations of the page.
+                    This page has {{ live_descendant_count }} subpages. Unpublish these too
                 {% endblocktrans %}
             {% endif %}
-        </p>
-
-        <form action="{% url 'wagtailadmin_pages:unpublish' page.id %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}">
-            {% if live_descendant_count > 0 or translation_descendant_count > 0 %}
-                {% fragment as text %}
-                    {% if translation_descendant_count %}
-                        {% if translation_descendant_count == 1 %}
-                            {% blocktrans trimmed count counter=live_descendant_count %}
-                                This page has one subpage and its translations have a combined one translated child page. Unpublish these too
-                            {% plural %}
-                                This page has {{ live_descendant_count }} child pages and its translations have a combined one translated child page. Unpublish these too
-                            {% endblocktrans %}
-                        {% else %}
-                            {% blocktrans trimmed count counter=live_descendant_count %}
-                                This page has one child page and its translations have a combined {{ translation_descendant_count }} translated child pages. Unpublish these too
-                            {% plural %}
-                                This page has {{ live_descendant_count }} child pages and its translations have a combined {{ translation_descendant_count }} translated child pages. Unpublish these too
-                            {% endblocktrans %}
-                        {% endif %}
-                    {% else %}
-                        {% blocktrans trimmed count counter=live_descendant_count %}
-                            This page has one subpage. Unpublish this too
-                        {% plural %}
-                            This page has {{ live_descendant_count }} subpages. Unpublish these too
-                        {% endblocktrans %}
-                    {% endif %}
-                {% endfragment %}
-                {% include "wagtailadmin/shared/forms/single_checkbox.html" with name="include_descendants" label_classname="w-label-3 w-mb-4" text=text %}
-            {% endif %}
-            <div>
-                <button class="button" type="submit">{% trans 'Yes, unpublish it' %}</button>
-                <a href="{% if next %}{{ next }}{% else %}{% url 'wagtailadmin_explore' page.get_parent.id %}{% endif %}" class="button button-secondary">{% trans "No, don't unpublish" %}</a>
-            </div>
-        </form>
-    </div>
+        {% endfragment %}
+        {% include "wagtailadmin/shared/forms/single_checkbox.html" with name="include_descendants" label_classname="w-label-3 w-mb-4" text=text %}
+    {% endif %}
 {% endblock %}
