@@ -1,0 +1,29 @@
+{% extends "wagtailadmin/base.html" %}
+{% load i18n wagtailadmin_tags %}
+{% block titletag %}{% blocktrans trimmed with title=object_display_title %}Unpublish {{ title }}{% endblocktrans %}{% endblock %}
+{% block content %}
+    {% trans "Unpublish" as unpublish_str %}
+    {% include "wagtailadmin/shared/header.html" with title=unpublish_str subtitle=object_display_title icon="doc-empty-inverse" %}
+
+    <div class="nice-padding">
+        {% block confirmation_text %}
+            <p>
+                {% blocktrans trimmed with model_name=model_opts.verbose_name %}
+                    Are you sure you want to unpublish this {{ model_name }}?
+                {% endblocktrans %}
+            </p>
+        {% endblock %}
+
+        <form action="{{ unpublish_url }}" method="POST">
+            {% csrf_token %}
+
+            {% block form_content %}
+            {% endblock %}
+
+            <div>
+                <button class="button" type="submit">{% trans 'Yes, unpublish it' %}</button>
+                <a href="{{ next_url }}" class="button button-secondary">{% trans "No, don't unpublish" %}</a>
+            </div>
+        </form>
+    </div>
+{% endblock %}
